--- a/middle_end/flambda/BUILD.bazel
+++ b/middle_end/flambda/BUILD.bazel
@@ -1,6 +1,5 @@
 load("//bzl:rules.bzl",
-     "boot_archive",
-     "boot_library",
+     "compiler_library",
      "compiler_module",
      "compiler_signature",
 )
@@ -9,71 +8,71 @@ MODULE_OPTS = []
 SIG_OPTS    = []
 
 # obazl testing, build everything
-boot_archive(
-    name = "flambda",
-    manifest  = [
-        ":Alias_analysis",
-        ":Allocated_const",
-        ":Augment_specialised_args",
-        ":Build_export_info",
-        ":Closure_conversion",
-        ":Closure_conversion_aux",
-        ":Closure_offsets",
-        ":Effect_analysis",
-        ":Export_info",
-        ":Export_info_for_pack",
-        ":Extract_projections",
-        ":Find_recursive_functions",
-        ":Flambda",
-        ":Flambda_invariants",
-        ":Flambda_iterators",
-        ":Flambda_middle_end",
-        ":Flambda_to_clambda",
-        ":Flambda_utils",
-        ":Freshening",
-        ":Import_approx",
-        ":Inconstant_idents",
-        ":Initialize_symbol_to_let_symbol",
-        ":Inline_and_simplify",
-        ":Inline_and_simplify_aux",
-        ":Inlining_cost",
-        ":Inlining_decision",
-        ":Inlining_stats",
-        ":Inlining_stats_types",
-        ":Inlining_transforms",
-        ":Invariant_params",
-        ":Lift_code",
-        ":Lift_constants",
-        ":Lift_let_to_initialize_symbol",
-        ":Parameter",
-        ":Pass_wrapper",
-        ":Projection",
-        ":Ref_to_variables",
-        ":Remove_free_vars_equal_to_args",
-        ":Remove_unused_arguments",
-        ":Remove_unused_closure_vars",
-        ":Remove_unused_program_constructs",
-        ":Share_constants",
-        ":Simple_value_approx",
-        ":Simplify_boxed_integer_ops",
-        ":Simplify_common",
-        ":Simplify_primitives",
-        ":Traverse_for_exported_symbols",
-        ":Un_anf",
-        ":Unbox_closures",
-        ":Unbox_free_vars_of_closures",
-        ":Unbox_specialised_args",
-    ],
-    # signatures  = [
-    #     ":Inlining_decision_intf_cmi",
-    #     ":Simplify_boxed_integer_ops_intf_cmi",
-    # ],
-)
+# compiler_library(
+#     name = "flambda",
+#     manifest  = [
+#         ":Alias_analysis",
+#         ":Allocated_const",
+#         ":Augment_specialised_args",
+#         ":Build_export_info",
+#         ":Closure_conversion",
+#         ":Closure_conversion_aux",
+#         ":Closure_offsets",
+#         ":Effect_analysis",
+#         ":Export_info",
+#         ":Export_info_for_pack",
+#         ":Extract_projections",
+#         ":Find_recursive_functions",
+#         ":Flambda",
+#         ":Flambda_invariants",
+#         ":Flambda_iterators",
+#         ":Flambda_middle_end",
+#         ":Flambda_to_clambda",
+#         ":Flambda_utils",
+#         ":Freshening",
+#         ":Import_approx",
+#         ":Inconstant_idents",
+#         ":Initialize_symbol_to_let_symbol",
+#         ":Inline_and_simplify",
+#         ":Inline_and_simplify_aux",
+#         ":Inlining_cost",
+#         ":Inlining_decision",
+#         ":Inlining_stats",
+#         ":Inlining_stats_types",
+#         ":Inlining_transforms",
+#         ":Invariant_params",
+#         ":Lift_code",
+#         ":Lift_constants",
+#         ":Lift_let_to_initialize_symbol",
+#         ":Parameter",
+#         ":Pass_wrapper",
+#         ":Projection",
+#         ":Ref_to_variables",
+#         ":Remove_free_vars_equal_to_args",
+#         ":Remove_unused_arguments",
+#         ":Remove_unused_closure_vars",
+#         ":Remove_unused_program_constructs",
+#         ":Share_constants",
+#         ":Simple_value_approx",
+#         ":Simplify_boxed_integer_ops",
+#         ":Simplify_common",
+#         ":Simplify_primitives",
+#         ":Traverse_for_exported_symbols",
+#         ":Un_anf",
+#         ":Unbox_closures",
+#         ":Unbox_free_vars_of_closures",
+#         ":Unbox_specialised_args",
+#     ],
+#     # signatures  = [
+#     #     ":Inlining_decision_intf_cmi",
+#     #     ":Simplify_boxed_integer_ops_intf_cmi",
+#     # ],
+# )
 
 ## compilerlibs/Makefile.compilerlibs:
 ## MIDDLE_END contains two sets of flambda deps. some are inlined, the
 ## rest are grouped in MIDDLE_END_FLAMBDA.
-boot_library(
+compiler_library(
     name = "ocamloptcomp",
     manifest  = [
         ## inlined in MIDDLE_END:
