--- a/driver/BUILD.bazel
+++ b/driver/BUILD.bazel
@@ -1,6 +1,6 @@
 load("//bzl:rules.bzl",
-     "boot_archive",
-     "boot_library",
+     # "boot_archive",
+     "compiler_library",
      "compiler_module",
      "compiler_signature",
 )
@@ -13,7 +13,7 @@ MODULE_OPTS = []
 SIG_OPTS    = []
 
 # boot_archive(
-boot_library(
+compiler_library(
     name = "driver",
     manifest  = [
         ":Compenv",
@@ -40,7 +40,7 @@ boot_library(
 ## for //compilerlibs:ocamlcommmon archive:
 # defined in compilerlibs/Makefile.compilerlibs as COMP, COMP_CMI
 # boot_archive(
-boot_library(
+compiler_library(
     name = "ocamlcommon",
     manifest  = [
         ":Compenv",
