--- a/config/camlheaders/BUILD.bazel
+++ b/config/camlheaders/BUILD.bazel
@@ -4,7 +4,7 @@ load(":BUILD_RULES.bzl", "camlheaders")
 camlheaders(
     name = "camlheaders",
     visibility = [
-        "@baseline//:__subpackages__",
+        "@dev//:__subpackages__",
         "//asmcomp:__pkg__",
         "//bin:__subpackages__",
         "//boot:__pkg__",
