add @dev//lib:ocamlcmt.opt.sh & aliases; improve output_groups
* add output_groups doc article
* better output_groups for modules and sigs

--- a/.baseline/bin/BUILD.bazel
+++ b/.baseline/bin/BUILD.bazel
@@ -5,6 +5,14 @@ load("@ocamlcc//tools:TOOL_RUNNERS.bzl",
      "run_ocamldep"
 )
 
+
+alias(name = "lstyp", actual = ":ocamlcmt.opt.sh")
+alias(name = "lst",   actual = ":ocamlcmt.opt.sh")
+run_ocamlcmt(
+    name = "ocamlcmt.opt.sh",
+    tool = "@dev//bin:ocamlcmt.opt",
+)
+
 run_ocamldep(
     name = "deps",
     tool = "@dev//bin:ocamldep.opt",
