--- a/config/ocaml/BUILD.bazel
+++ b/config/ocaml/BUILD.bazel
@@ -16,8 +16,8 @@ package(default_visibility = ["//visibility:public"])
 bool_flag( name = "absname", build_setting_default = True)
 config_setting(name = "absname?", flag_values = {":absname": "True"})
 
-bool_flag( name = "bin-annot", build_setting_default = True)
-config_setting(name = "bin-annot?", flag_values = {":bin-annot": "True"})
+# bool_flag( name = "bin-annot", build_setting_default = True)
+# config_setting(name = "bin-annot?", flag_values = {":bin-annot": "True"})
 
 bool_flag( name = "flat_float_array", build_setting_default = True)
 config_setting(name = "flat_float_array?",
