fixes for tool runners, switch to compiler_library
* add tool runner targets to @dev//bin
* fix repl support
* boot imports fixes
* finish migrating from *_archive to compiler_library
* remove some unneeded library targets
* tools/TOOL_RUNNERS.bzl fixes

--- a/.baseline/bin/BUILD.bazel
+++ b/.baseline/bin/BUILD.bazel
@@ -2,12 +2,23 @@ exports_files(glob(["**"]))
 
 load("@ocamlcc//tools:TOOL_RUNNERS.bzl",
      "run_ocamlcmt",
-     "run_ocamldep"
-)
+     "run_ocamldep",
+     "run_tool",
+     "run_repl")
 
+run_repl(
+    name = "repl",
+    repl = ":ocaml.byte",
+    data = [
+        ":ocamlrun",
+        ":ocaml.byte"],
+    args = ["$(rlocationpath :ocamlrun)",
+            "$(rlocationpath :ocaml.byte)"]
+)
 
 alias(name = "lstyp", actual = ":ocamlcmt.opt.sh")
 alias(name = "lst",   actual = ":ocamlcmt.opt.sh")
+alias(name = "cmt",   actual = ":ocamlcmt.opt.sh")
 run_ocamlcmt(
     name = "ocamlcmt.opt.sh",
     tool = "@dev//bin:ocamlcmt.opt",
@@ -16,4 +27,30 @@ run_ocamlcmt(
 run_ocamldep(
     name = "deps",
     tool = "@dev//bin:ocamldep.opt",
+)
+
+run_tool(
+    name = "dumpobj",
+    tool = "@dev//bin:dumpobj.opt",
+            # default = "@ocamlcc//:arg",
+    arg  = ":arg",
+)
+
+run_tool(
+    name = "lso",
+    tool = "@dev//bin:ocamlobjinfo.opt",
+    arg  = "@ocamlcc//:arg",
+)
+run_tool(
+    name = "ocamlobjinfo",
+    tool = "@dev//bin:ocamlobjinfo.opt",
+    # tool = "//tools:ocamlobjinfo",
+    arg  = "@ocamlcc//:arg",
+)
+
+alias(name = "lsp",   actual = ":primreq")
+run_tool(
+    name = "primreq",
+    tool = "@dev//bin:primreq.opt",
+    arg  = "@ocamlcc//:arg",
 )
